modif of kaa_metadata for Mac encoding, remove of unused kaa_metadata modules, updated setup and readme

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,6 @@
-include README.txt
+include README.txt README.html
 include DESCRIPTION.txt DESCRIPTION.html
+include pytomo.man
 
 include pytomo*.spec
  
